examples/test/testpolicy8237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8237
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key10: value19
      key8: value4
      key28: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value20
          key23: value31
      podSelector:
        matchLabels:
          key42: value37
